# cse447-project

./: .dockerignore  .gitignore  Dockerfile  README.md  SPECIFICATION.md  config.yaml  data_config.yaml  kenlm.md  pyproject.toml  requirements.txt  submit.sh
.github/workflows/: ruff.yml
grader/: grade.py
notebooks/: plot_sweep.ipynb
scripts/: README.md  augment_train.py  ckpt_to_pt.py  eval_kenlm_topk.py  extend_inputs.py  gemini_predictor.py  grade.py  oov_test.py  parse_predictions_table.py  plot_sweep.ipynb  prepare_distill_sequences.py  prepare_distill_valid.py
src/: config.yaml  myprogram.py  predict.py  predict.sh  train_reranker.py
src/data/: README.md  builddataset.py  precompute_kenlm_candidates.py  precompute_random_candidates.py  preprocess.py
src/reranker/: README.md  __init__.py  config.py  dataset.py  lightning_module.py  model.py  train.py
src/scripts/: gemini_predictor.py  gemini_predictor_sync.py  report.txt
src/utils/: text_utils.py
